--- a/cfg/client.cfg
+++ b/cfg/client.cfg
@@ -1,6 +1,7 @@
 accessibility.allynametagcolour "0"
 accessibility.buildingblockedzonecolour "0"
 accessibility.clannametagcolour "0"
+accessibility.disablemovementininventory "False"
 accessibility.enemynametagcolour "0"
 accessibility.healthbarcolour "0"
 accessibility.holosightcolour "0"
@@ -22,6 +23,7 @@ audio.musicvolumemenu "0"
 audio.speakers "2"
 audio.voiceprops "1"
 audio.voices "1"
+client.allowdiscordprovisionalaccount "True"
 client.bag_unclaim_duration "2"
 client.bagassignmode "0"
 client.building_guide_mode "1"
@@ -38,10 +40,13 @@ client.camoffset "(0.00, 1.00, 0.00)"
 client.camoffset_relative "False"
 client.clampscreenshake "True"
 client.crosshair "True"
+client.drawrangevolumes "True"
+client.enablefriendslogging "False"
 client.errortoasts_in_chat "False"
 client.hascompletedtutorial "False"
 client.hasdeclinedtutorial "True"
 client.headbob "False"
+client.hidedmsinstreamermode "False"
 client.hitcross "False"
 client.hurtpunch "False"
 client.io_arrow_important_only "True"
@@ -55,6 +60,7 @@ client.pushtotalk "True"
 client.rockskin "0"
 client.selectedshippingcontainerblockcolour "0"
 client.showcaminfo "False"
+client.showgrowableui "True"
 client.showmissionprovidersonmap "True"
 client.showsleepingbagsonmap "True"
 client.showvendingmachinesonmap "True"
@@ -117,7 +123,7 @@ global.censorsigns "False"
 global.consolescale "12"
 global.debuglanguage "0"
 global.flyingvehicledismounttime "0"
-global.god "True"
+global.god "False"
 global.groundvehicledismounttime "0"
 global.hideinteracttextwhileads "False"
 global.hideteamleadermapmarkers "False"
@@ -142,6 +148,7 @@ graphics.chat "True"
 graphics.collapserenderers "True"
 graphics.compass "1"
 graphics.contactshadows "False"
+graphics.dlaa "False"
 graphics.dlss "-1"
 graphics.dof "False"
 graphics.dof_aper "12"
@@ -158,7 +165,7 @@ graphics.fov "90"
 graphics.grassshadows "False"
 graphics.hlod "True"
 graphics.impostorshadows "False"
-graphics.jitterspread "1"
+graphics.lodbias "0.7"
 graphics.maxqueuedframes "2"
 graphics.parallax "0"
 graphics.reflexintervalus "0"
@@ -167,8 +174,6 @@ graphics.renderscale "1"
 graphics.resolution "0"
 graphics.screenmode "1"
 graphics.shaderlod "300"
-graphics.shadowcascades "1"
-graphics.shadowdistance "50"
 graphics.shadowlights "0"
 graphics.shadowmode "1"
 graphics.shadowquality "0"
@@ -178,6 +183,17 @@ graphics.viewmodeldepth "True"
 graphics.vm_fov_scale "False"
 graphics.vm_horizontal_flip "False"
 graphics.vsync "0"
+graphicssettings.anisotropicfiltering "1"
+graphicssettings.billboardsfacecameraposition "False"
+graphicssettings.enablelodcrossfade "True"
+graphicssettings.globaltexturemipmaplimit "1"
+graphicssettings.particleraycastbudget "256"
+graphicssettings.pixellightcount "3"
+graphicssettings.shadowcascades "1"
+graphicssettings.shadowdistancepercent "50"
+graphicssettings.shadowmaskmode "0"
+graphicssettings.shadowresolution "1"
+graphicssettings.softparticles "False"
 grass.displacement "True"
 grass.distance "100"
 grass.quality "0"
@@ -197,6 +213,7 @@ input.vehicle_sensitivity "1"
 instruments.processsustainpedal "True"
 inventory.quickcraftdelay "0.75"
 legs.enablelegs "True"
+lod.grid_refresh_budget "0.1"
 mesh.quality "0"
 netgraph.enabled "False"
 netgraph.updatespeed "5"
@@ -228,7 +245,6 @@ sss.scale "1"
 steam.use_steam_nicknames "True"
 system.auto_cpu_affinity "True"
 terrain.quality "100"
-texture.streaming "True"
 tree.meshes "100"
 tree.quality "200"
 ui.autoswitchchannel "True"
