--- a/cfg/client.cfg
+++ b/cfg/client.cfg
@@ -11,6 +11,7 @@ accessibility.ioarrowinputcolor "0"
 accessibility.ioarrowoutputcolor "0"
 accessibility.laserdetectorcolour "0"
 accessibility.mushroomcolour "0"
+accessibility.senduinavigationevents "False"
 accessibility.teamnametagcolour "0"
 accessibility.treemarkercolor "0"
 audio.advancedocclusion "False"
@@ -245,6 +246,7 @@ sss.scale "1"
 steam.use_steam_nicknames "True"
 system.auto_cpu_affinity "True"
 terrain.quality "100"
+texture.memory_budget_factor "1"
 tree.meshes "100"
 tree.quality "200"
 ui.autoswitchchannel "True"
@@ -298,6 +300,7 @@ metaldetectorsource.draweditorgizmos "False"
 midiconvar.debugmode "False"
 midiconvar.enabled "False"
 nametags.enabled "True"
+projectile.preventcameraclip "True"
 recordertool.debugrecording "False"
 rgbeffects.brightness "1"
 rgbeffects.colorcorrection_razer "(3.00, 3.00, 3.00)"
