--- a/cfg/client.cfg
+++ b/cfg/client.cfg
@@ -22,9 +22,14 @@ audio.master "1"
 audio.musicvolume "0"
 audio.musicvolumemenu "0"
 audio.speakers "2"
+audio.ui "1"
 audio.voiceprops "1"
 audio.voices "1"
+client.allowcameratiltondpv "True"
 client.allowdiscordprovisionalaccount "True"
+client.allowteaminvitesremoteplayers "True"
+client.autoconnect ""
+client.autosavepaintings "True"
 client.bag_unclaim_duration "2"
 client.bagassignmode "0"
 client.building_guide_mode "1"
@@ -60,6 +65,7 @@ client.orbitcamlookspeed "50"
 client.pushtotalk "True"
 client.rockskin "0"
 client.selectedshippingcontainerblockcolour "0"
+client.server_restart_warnings_in_chat "False"
 client.showcaminfo "False"
 client.showgrowableui "True"
 client.showmissionprovidersonmap "True"
@@ -101,7 +107,7 @@ effects.hurtoverleyapplylighting "False"
 effects.lensdirt "False"
 effects.maxgibdist "150"
 effects.maxgiblife "10"
-effects.maxgibs "0"
+effects.maxgibs "-1"
 effects.mingiblife "5"
 effects.motionblur "False"
 effects.otherplayerslightflares "True"
@@ -114,7 +120,6 @@ fps.limitinbackground "False"
 fps.limitinmenu "False"
 gc.buffer "256"
 global.aquaticvehicledismounttime "0"
-global.asyncloadingpreset "0"
 global.blockemoji "False"
 global.blockemojianimations "False"
 global.blockserveremoji "False"
@@ -125,6 +130,7 @@ global.consolescale "12"
 global.debuglanguage "0"
 global.flyingvehicledismounttime "0"
 global.god "False"
+global.godforceoffoverlay "False"
 global.groundvehicledismounttime "0"
 global.hideinteracttextwhileads "False"
 global.hideteamleadermapmarkers "False"
@@ -174,15 +180,15 @@ graphics.reflexmode "0"
 graphics.renderscale "1"
 graphics.resolution "0"
 graphics.screenmode "1"
-graphics.shaderlod "300"
+graphics.shaderlod "3"
 graphics.shadowlights "0"
 graphics.shadowmode "1"
 graphics.shadowquality "0"
 graphics.uiscale "1"
-graphics.viewmodelcamera "True"
 graphics.viewmodeldepth "True"
 graphics.vm_fov_scale "False"
 graphics.vm_horizontal_flip "False"
+graphics.volumetric_clouds "0"
 graphics.vsync "0"
 graphicssettings.anisotropicfiltering "1"
 graphicssettings.billboardsfacecameraposition "False"
@@ -219,6 +225,7 @@ mesh.quality "0"
 netgraph.enabled "False"
 netgraph.updatespeed "5"
 particle.quality "0"
+party.party_invites_enabled "True"
 player.cold_breath "True"
 player.footik "True"
 player.footikdistance "30"
@@ -244,12 +251,15 @@ sss.halfres "True"
 sss.quality "0"
 sss.scale "1"
 steam.use_steam_nicknames "True"
+store.inventorymode "0"
+store.preloadweeklyskins "True"
 system.auto_cpu_affinity "True"
 terrain.quality "100"
-texture.memory_budget_factor "1"
+texture.memory_budget_factor "1.015495"
 tree.meshes "100"
 tree.quality "200"
 ui.autoswitchchannel "True"
+ui.scrollsensitivity "1"
 ui.showbeltbarbinds "False"
 ui.showinventoryplayer "True"
 ui.showusebind "False"
@@ -295,6 +305,7 @@ gesturecollection.slot8ring0bind "victory"
 gesturecollection.slot8ring1bind ""
 gesturecollection.slot9ring0bind "wave"
 gesturecollection.slot9ring1bind ""
+lookattooltip.crosshairmode "0"
 megaphone.ignorepushtotalk "True"
 metaldetectorsource.draweditorgizmos "False"
 midiconvar.debugmode "False"
@@ -310,5 +321,6 @@ keyboardmidi.midikeymap "qwerty-uk.json"
 screenshot.hiresscreenshotcustomwidth "0"
 shoutcaststreamer.allowinternetstreams "True"
 shoutcaststreamer.maxaudiostreams "3"
+socket_free_snappable.snappingmode "2"
 strobelight.forceoff "False"
 toolgun.classiceffects "False"
