--- a/cfg/favorites.cfg
+++ b/cfg/favorites.cfg
@@ -32,6 +32,14 @@
     {
       "Value": "eu-10x-swift.templargaming.net",
       "Timestamp": 1734260895
+    },
+    {
+      "Value": "10xtrio.andysolam.eu",
+      "Timestamp": 1755885730
+    },
+    {
+      "Value": "10xduo.andysolam.eu",
+      "Timestamp": 1755885730
     }
   ]
 }
