--- a/cfg/keys.cfg
+++ b/cfg/keys.cfg
@@ -55,3 +55,13 @@ bind mouse3 ~graphics.fov 90;graphics.fov 70
 bind mouse4 swapseats
 bind mousewheelup +invprev
 bind mousewheeldown +invnext
+bind [leftcontrol+1] swaptoseat 0
+bind [leftcontrol+2] swaptoseat 1
+bind [leftcontrol+3] swaptoseat 2
+bind [leftcontrol+4] swaptoseat 3
+bind [leftcontrol+5] swaptoseat 4
+bind [leftcontrol+6] swaptoseat 5
+bind [leftcontrol+7] swaptoseat 6
+bind [leftcontrol+8] swaptoseat 7
+bind [leftshift+mousewheelup] +wireslackup
+bind [leftshift+mousewheeldown] +wireslackdown
