--- a/cfg/keys_default.cfg
+++ b/cfg/keys_default.cfg
@@ -31,7 +31,6 @@ bind tab inventory.toggle
 bind q inventory.togglecrafting
 bind f lighttoggle
 bind n inventory.examineheld
-bind x swapseats
 bind c +compass
 bind h +hoverloot
 bind b +gestures
@@ -59,3 +58,15 @@ bind pagedown +zoomdecrease
 
 bind y +opentutorialhelp
 
+bind x swapseats
+bind [leftcontrol+1] swaptoseat 0
+bind [leftcontrol+2] swaptoseat 1
+bind [leftcontrol+3] swaptoseat 2
+bind [leftcontrol+4] swaptoseat 3
+bind [leftcontrol+5] swaptoseat 4
+bind [leftcontrol+6] swaptoseat 5
+bind [leftcontrol+7] swaptoseat 6
+bind [leftcontrol+8] swaptoseat 7
+                           
+bind [leftshift+mousewheelup] +wireslackup
+bind [leftshift+mousewheeldown] +wireslackdown
