--- a/cfg/client.cfg
+++ b/cfg/client.cfg
@@ -205,6 +205,8 @@ grass.displacement "True"
 grass.distance "100"
 grass.quality "0"
 grass.refresh_budget "0.3"
+indirect_instancing.debug "False"
+indirect_instancing.enabled "False"
 input.ads_sensitivity "1"
 input.alwayssprint "False"
 input.autocrouch "False"
@@ -255,10 +257,10 @@ store.inventorymode "0"
 store.preloadweeklyskins "True"
 system.auto_cpu_affinity "True"
 terrain.quality "100"
-texture.memory_budget_factor "1.015495"
 tree.meshes "100"
 tree.quality "200"
 ui.autoswitchchannel "True"
+ui.monumentnotificationtoasts "False"
 ui.scrollsensitivity "1"
 ui.showbeltbarbinds "False"
 ui.showinventoryplayer "True"
@@ -266,6 +268,16 @@ ui.showusebind "False"
 voice.loopback "False"
 water.quality "0"
 water.reflections "0"
+crosshair.color "0"
+crosshair.dotsize "1.7"
+crosshair.dynamic_spacing "True"
+crosshair.dynamic_visibility "True"
+crosshair.length "7"
+crosshair.outline "False"
+crosshair.outlinecolor "0"
+crosshair.spacing "1"
+crosshair.style "0"
+crosshair.width "2"
 espplayerinfo.blueteamid "3000"
 espplayerinfo.grayteamid "7000"
 espplayerinfo.greenteamid "1000"
