27/12/2025 cada día va peor rust

--- a/cfg/client.cfg
+++ b/cfg/client.cfg
@@ -63,13 +63,14 @@ client.map_marker_color "-1"
 client.orbitcamdist "2"
 client.orbitcamlookspeed "50"
 client.pushtotalk "True"
-client.rockskin "0"
+client.rockskin "11036"
 client.selectedshippingcontainerblockcolour "0"
 client.server_restart_warnings_in_chat "False"
 client.showcaminfo "False"
 client.showgrowableui "True"
 client.showmissionprovidersonmap "True"
 client.showsleepingbagsonmap "True"
+client.showtogglegrowableui "True"
 client.showvendingmachinesonmap "True"
 client.sortskinsrecentlyused "True"
 client.torchskin "0"
@@ -224,6 +225,7 @@ lod.grid_refresh_budget "0.1"
 mesh.quality "0"
 netgraph.enabled "False"
 netgraph.updatespeed "5"
+paint.favcolours "#95BF4B, #CD412B, #1F6BA0"
 particle.quality "0"
 party.party_invites_enabled "True"
 player.cold_breath "True"
@@ -251,7 +253,6 @@ sss.halfres "True"
 sss.quality "0"
 sss.scale "1"
 steam.use_steam_nicknames "True"
-store.inventorymode "0"
 store.preloadweeklyskins "True"
 system.auto_cpu_affinity "True"
 terrain.quality "100"
@@ -328,6 +329,7 @@ rgbeffects.colorcorrection_razer "(3.00, 3.00, 3.00)"
 rgbeffects.colorcorrection_steelseries "(1.50, 1.50, 1.50)"
 rgbeffects.enabled "True"
 keyboardmidi.midikeymap "qwerty-uk.json"
+ui_dropscontroller.show_placeholder_drop_data "False"
 screenshot.hiresscreenshotcustomwidth "0"
 shoutcaststreamer.allowinternetstreams "True"
 shoutcaststreamer.maxaudiostreams "3"
