--- a/cfg/favorites.cfg
+++ b/cfg/favorites.cfg
@@ -1,6 +1,6 @@
 {
-  "Nexuses": [],
-  "Servers": [
+  "HistoryNexuses": [],
+  "FavoriteServers": [
     {
       "Value": "nobps.rustoria.uk",
       "Timestamp": 1712481761
